--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "u-develop-it",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
